マルコフ連鎖に夜文書生成bot

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+src/crawler/param.yml
+res/*.txt
+src/preprocessing/.ipynb_checkpoints
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
